--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><strong>nome</strong> - marisilva@gmail.com</li>
     <li><strong>nome</strong> - marisilva@gmail.com</li>
   </ul>
-   JC Designer
+     <h2>JC Designer</h2>
 </body>
 
 </html>
